# Agents_for_Finance

./: README.md  app.py  crew.py  escape_utils.py  pyproject.toml  requirements.txt  startup_env_patch.py
config/: agents.yaml  tasks.yaml
crew_results/: crew_result_BBRI.JK.md
src/research_test/: app.py  crew.py  main.py
src/research_test/config/: agents.yaml  tasks.yaml
src/research_test/tools/: custom_tool.py
tools/: fundamental_analysis.py  fundamental_analysis_quarter.py  macroeconom_analysis.py  technical_analysis.py
