[project]
name = "agents_for_finance"
version = "0.1.0"
description = "Streamlit-based financial multi-agent analysis app"
authors = [{ name = "Samuel Andreass", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10,<3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
